# smoleval

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
crates/smoleval/: Cargo.toml  README.md
crates/smoleval-cli/: Cargo.toml  README.md
crates/smoleval-cli-example/: Cargo.toml  README.md  agent.py
crates/smoleval-cli-example/data/: eval_dataset.yaml
crates/smoleval-cli-example/src/: main.rs
crates/smoleval-cli/src/: main.rs  report.rs
crates/smoleval-example/: Cargo.toml  README.md
crates/smoleval-example/data/: mock_eval_dataset.yaml
crates/smoleval-example/src/: main.rs
crates/smoleval-http/: Cargo.toml
crates/smoleval-http/src/: http_agent.rs  lib.rs
crates/smoleval/src/: agent.rs  check.rs  dataset.rs  error.rs  eval.rs  http_agent.rs  lib.rs
crates/smoleval/tests/: integration.rs
crates/smoleval/tests/fixtures/: sample_eval.yaml
examples/: weather_eval.yaml
