[workspace]
members = [
    "crates/smoleval",
    "crates/smoleval-cli",
    "crates/smoleval-cli-example",
    "crates/smoleval-example",
]
resolver = "2"

[workspace.dependencies]
smoleval = { version = "0.2.0", path = "crates/smoleval" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
