[package]
name = "smoleval-cli-example"
version = "0.1.0"
edition = "2024"
readme = "README.md"
publish = false

[dependencies]
axum = "0.8"
dotenvy = "0.15"
rig-core = "0.32"
serde = { workspace = true }
serde_json = { workspace = true }
smoleval = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
