[package]
name = "smoleval-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for smoleval, a minimal evaluation framework for AI agents"
license = "Apache-2.0"
repository = "https://github.com/Winston-503/smoleval"

[[bin]]
name = "smoleval"
path = "src/main.rs"

[dependencies]
smoleval = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
