[package]
name = "smoleval-cli"
version = "0.2.0"
edition = "2024"
description = "CLI for smoleval"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Winston-503/smoleval"

[[bin]]
name = "smoleval"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
smoleval = { workspace = true }
tokio = { workspace = true }
