[package]
name = "smoleval-example"
version = "0.1.0"
edition = "2024"
readme = "README.md"
publish = false

[dependencies]
dotenvy = "0.15"
rig-core = "0.32"
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
smoleval = { workspace = true }
tokio = { workspace = true }
