[package]
name = "smoleval"
version = "0.1.2"
edition = "2024"
description = "A minimal evaluation framework for AI agents"
license = "Apache-2.0"
repository = "https://github.com/Winston-503/smoleval"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
