[package]
name = "smoleval"
version = "0.1.3"
edition = "2024"
description = "A minimal evaluation framework for AI agents"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Winston-503/smoleval"

[features]
default = ["http"]
http = ["reqwest"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
