[package]
name = "smoleval"
version = "0.2.0"
edition = "2024"
description = "Minimal and lightweight evaluation framework for AI agents"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Winston-503/smoleval"

[features]
default = ["http"]
http = ["reqwest"]

[dependencies]
futures = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
